--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <h1>Credential Management Bugs: Password Manager</h1>
   </head>
   <article>
-    <h2>Bugs Created per Month:</h2>
+    <h2>Bugs Created per Month</h2>
     <div id=timeline></div>
     <p>
       Bugs created per month: <output id=bugs-per-month>-</output> (average over last 12 months).
@@ -70,7 +70,7 @@
       <a href=#>Total open bugs</a>: <output id=open-bugs-total>-</output>,
       <a href=#last-month>bugs created within the last month</a>: <output id=last-months-bugs>-</output>,
       bugs <a href=#untriaged>left to triage</a>: <output id=left-to-triage-total>-</output>,
-      <a href=#last-quarter-untriaged>left to triage within the last 3 months</a>: <output id=left-to-triage-last-quarter-total>-</output>
+      <a href=#last-quarter-untriaged>left to triage within the last quarter</a>: <output id=left-to-triage-last-quarter-total>-</output>
       (unconfirmed and not flagged as needinfo),
       <a href=#last-month-triaged>triaged bugs changed within the last month</a>: <output id=triaged-last-month-total>-</output>,
       bugs <a href=#needinfo>needing info</a>: <output id=needsinfo-total>-</output>.
